--- a/party-planner-thomas-april-aaron/src/App.css
+++ b/party-planner-thomas-april-aaron/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.container {
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 900px;
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.column {
+  float: left;
+  padding: 15px;
+  text-align: center;
+  height: 700px;
+}
+
+.center {
+  text-align: center;
+  height: 130px;
+}
+
+.left {
+  width: 17%;
+}
+
+.middle {
+  width: 23%;
+  margin-top:.6em;
+}
+
+.right {
+  width: 50%;
+  background-color: #F0F8FF;
+}
+
+.half {
+  width: 50%;
+  height: 100px;
+}
+
+.inputField {
+  height: 40px;
+  font-size: 28px;
+}
+
+.buttonOne {
+  margin-left: -65px;
+}
+
+.buttonTwo {
+  margin-left: -50px;
+}
+
+p {
+  display: block;
+  margin-top: 1.8em;
+  font-size: 25px;
+}
+
+button {
+  font-size: 28px;
+  width: 150px;
+  height: 70px;
+}
+
+h1 {
+  text-decoration: underline;
+  font-family: "Georgia";
+  font-size: 80px;
+  margin-top: .2em;
+}
+
+.inputMargin {
+  margin-top: 1.3em;
+}
+
+.story {
+  font-size: 35px;
+}
+
+.right:after {
+  content: '';
+  display: table;
+  clear: both;
 }
