ready for preso

--- a/party-planner-thomas-april-aaron/src/App.css
+++ b/party-planner-thomas-april-aaron/src/App.css
@@ -1,3 +1,9 @@
+body{
+  background-image: url('./images/double-bubble-outline.png');
+  background-repeat: repeat;
+  font-family: 'Roboto', sans-serif;
+}
+
 .container {
   flex-direction: column;
   flex-wrap: wrap;
@@ -63,11 +69,19 @@ button {
   font-size: 28px;
   width: 150px;
   height: 70px;
+  background-color: #cacaca;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
 }
 
 h1 {
   text-decoration: underline;
-  font-family: "Georgia";
+  font-family:  'Lobster', cursive;
   font-size: 80px;
   margin-top: .2em;
 }
